# research

./: .env.sample  .gitignore  README.md  devenv.nix  pyproject.toml
research/: agentic-trading-system copy.ipynb  agentic-trading-system-local.ipynb  arxiv_api_testing.ipynb  faster_tts.py  google_tools.ipynb  langchain_basic_setup.ipynb  langchain_lcel_example.ipynb  langchain_rag_search.ipynb  openai-modern-dev.ipynb  openbb copy.ipynb  openbb.ipynb  pinterest_image_downloader.ipynb  rag_local_ollama_langchain.ipynb  research_assistant.ipynb  research_assistant_google.ipynb  sounddevice_reference.py  test_openai_realtime_sync.ipynb  torch_test.ipynb
research/agents/ada/: anthropic_agent.ipynb  openai_agent.ipynb
research/ats/: agentic-trading-system-local copy.ipynb  agentic-trading-system.ipynb  openbb_agent_toool.ipynb  openbb_ticker_valuation.ipynb
research/headshots/: headshot.ipynb
research/langchain/: rag_qa_langchain.ipynb
research/tts/: bark.ipynb  faster_tts.ipynb  simple_pyaudio_usage.ipynb
