[project]
name = "research"
version = "0.1.0"
description = "This is a project which houses various research efforts"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "arxiv",
  "ipykernel",
  "jupyter",
  "jupyterlab",
  "ipython",
  "python-dotenv",
  "pandas",
  "requests",
  "matplotlib",
  "pip",
  "openbb",
  "langchain-openai",
  "langchain-ollama",
  "langchain-core",
  "langchain-community",
  "langgraph",
]